--- a/app/blueprints/auth/templates/change_password.html
+++ b/app/blueprints/auth/templates/change_password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登录</title>
+    <title>修改密码</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_info_management.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_auth.css') }}">
 </head>
@@ -17,19 +17,27 @@
             </ul>
         </div>
 
-        <div class="heading">登录</div>
+        <div class="heading">修改密码</div>
 
         <!-- 输入学号、密码 -->
-        <form method="post" action="/auth/login/" class="form">
-            <input class="input" type="text" name="student_id" id="student_id" placeholder="学号" required>
-            <input class="input" type="password" name="password" id="password" placeholder="密码" required>
-            <span class="forgot-password"><a href="/auth/change_password/">忘记密码？</a></span>
-            <span class="forgot-password"><a href="/auth/register/">没有账户？点击以创建新账户。</a></span>
-            <input class="login-button" type="submit" value="登录">
+        <form method="post" action="/auth/change_password/" class="form">
+            <input required class="input" type="number" name="student_id" id="student_id"
+                   placeholder="学号" value="{{ student_id }}">
+            <input required class="input" type="password" name="new_password" id="new_password"
+                   placeholder="新密码" value="{{ new_password }}">
+            <input required class="input" type="password" name="new_password_again" id="new_password_again"
+                   placeholder="再次输入新密码"  value="{{ new_password }}">
+            <br>
+            <button class="btn btn-primary" name="method" value="get_CAPTCHA">获取验证码</button>
+            <input class="input" type="number" name="CAPTCHA" id="CAPTCHA" placeholder="验证码">
+            <br>
+            <button class="login-button" name="method" value="confirm">确定修改密码</button>
+<!--            <input class="login-button" type="submit" value="确定修改密码">-->
         </form>
     </div>
 </body>
 </html>
+
 
 <!--    <div class="social-account-container">-->
 <!--        <span class="title">Or Sign in with</span>-->
