--- a/app/blueprints/auth/templates/register.html
+++ b/app/blueprints/auth/templates/register.html
@@ -20,10 +20,18 @@
 
         <!-- 输入学号、密码 -->
         <form method="post" action="/auth/register/" class="form">
-            <input required class="input" type="text" name="name" id="name" placeholder="真实姓名">
-            <input required class="input" type="number" name="student_id" id="student_id" placeholder="学号">
-            <input required class="input" type="password" name="password" id="password" placeholder="密码">
-            <input class="login-button" type="submit" value="注册">
+            <input required class="input" type="text" name="name" id="name"
+                   placeholder="真实姓名" value="{{ name }}">
+            <input required class="input" type="number" name="student_id" id="student_id"
+                   placeholder="学号" value="{{ student_id }}">
+            <input required class="input" type="password" name="password" id="password"
+                   placeholder="密码" value="{{ password }}">
+            <!-- 获取并输入验证码 -->
+            <button class="btn btn-primary" name="method" value="get_CAPTCHA">获取验证码</button>
+            <input class="input" type="number" name="CAPTCHA" id="CAPTCHA" placeholder="验证码">
+
+            <button class="login-button" name="method" value="register">注册</button>
+<!--            <input class="login-button" type="submit" value="注册">-->
         </form>
     </div>
 </body>
