1. 对数据库的表进行反射，从而将“信息管理系统”从执行原生 sql 语句重构为操作 ORM 类。 2. 学习了“通用的动态查询”，可方便地根据 fields_to_select、filters执行任意的查询操作。 3. 将“获取用户信息”功能封装为一个函数。

--- a/app/blueprints/info_management/templates/info_management.html
+++ b/app/blueprints/info_management/templates/info_management.html
@@ -44,13 +44,13 @@
                 <div class="form-group">
                     <!-- 选择需要特异性查询的字段，并输入需要查询的值 -->
                     <h4>条件查询</h4>
-                    <select id="filed_to_select" name="filed_to_select">
+                    <select id="filter_field" name="filter_field">
                         {% for row in fields %}
                             <option value={{row.0}} {{row.3}}>{{row.1}}</option>
                         {% endfor %}
                     </select>
-                    <input type="text" id="filed_to_select_value"
-                           name="filed_to_select_value" value="{{ filed_to_select_value }}"
+                    <input type="text" id="filter_field_value"
+                           name="filter_field_value" value="{{ filter_field_value }}"
                            placeholder="请输入想查询的值">
                 </div>
 
@@ -103,7 +103,7 @@
                         <thead>
                             <tr>
                                 <th></th>
-                                {% for f in field_select %}
+                                {% for f in field_selected %}
                                     <th>{{f}}</th>
                                 {% endfor %}
                                 <th></th>
