1. 修复了由于 session 过期导致错误的 bug。 2. 新增了“分页”、“敏感数据脱敏”功能。

--- a/app/blueprints/info_management/templates/info_management.html
+++ b/app/blueprints/info_management/templates/info_management.html
@@ -129,8 +129,11 @@
                             {% endfor %}
                         </tbody>
                     </table>
-
+                    <p>第{{ page_current }}/{{ page_number }}页</p>
+                    <button class="btn btn-primary" name="method" value="last_page">上一页</button>
+                    <button class="btn btn-primary" name="method" value="next_page">下一页</button>
                 </form>
+
             </div>
         {% endif %}
     </div>
