1. 将“学生详细信息”界面的查询条件更新为“id”，从而解决了无法打开“详细”的bug。

--- a/app/blueprints/info_management/templates/info_management.html
+++ b/app/blueprints/info_management/templates/info_management.html
@@ -103,8 +103,9 @@
                         <thead>
                             <tr>
                                 <th></th>
+                                <th>id</th>
                                 {% for f in field_selected %}
-                                    <th>{{f}}</th>
+                                    <th>{{ f }}</th>
                                 {% endfor %}
                                 <th></th>
                             </tr>
@@ -119,11 +120,11 @@
                                         </label>
                                     </td>
                                     {% for value in row_value %}
-                                        <td>{{value}}</td>
+                                        <td>{{ value }}</td>
                                     {% endfor %}
                                     <td>
                                         <button class="btn btn-primary" name="method"
-                                                value="detail-{{row_value.1}}">详情</button>
+                                                value="detail_{{row_value.0}}">详情</button>
                                     </td>
                                 </tr>
                             {% endfor %}
