--- a/app/blueprints/info_management/templates/info_management/detail_info.html
+++ b/app/blueprints/info_management/templates/info_management/detail_info.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html lang="zh-CN" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
+{% extends "base.html" %}
+
+{% block title %}
     {% if id %}
-        <title>{{fields_values.0.2}}的详细信息</title>
+        {{fields_values.0.2}}的详细信息
     {% else %}
-        <title>新增信息</title>
+        新增信息
     {% endif %}
+{% endblock %}
+
+{% block special_css %}
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_info_management.css') }}">
-</head>
-<body>
+{% endblock %}
+
+{% block content %}
+<div class="container">
     <!-- 返回上一个页面 -->
     <div class="instructions">
         {% if id %}
@@ -84,5 +88,5 @@
             </form>
         {% endif %}
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
