1. 为各个route.py注释了使用的session的键。

--- a/app/blueprints/count_inform/templates/count_inform/home.html
+++ b/app/blueprints/count_inform/templates/count_inform/home.html
@@ -21,7 +21,7 @@
         </div>
 
         <!-- 信息途径选取 -->
-        <div class="card">
+        <div class="card" id="result">
             <h2>选择信息来源</h2>
 
             <!-- QQ接龙 -->
@@ -38,7 +38,7 @@
             {% if description %}
                 <div class="card">
                     <h2>对选中项进行操作</h2>
-                    <form method="post" action="/count_inform/" id="result">
+                    <form method="post" action="/count_inform/">
 
                         <div class="table-container">
                             <table style="width: 40%">
